--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Rock Paper Scissors by Nemesis&trade;</title>
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="src/css/style.css">
+	<link rel="stylesheet" href="src/css/all.min.css">
 </head>
 <body>
 	<h1 class="title">Rock Paper Scissors</h1>
 	<div id="board"></div>
 
-	<footer>Made with 
-		<span><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="crimson" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg></span> by Nemesis&trade;</footer>
+	<footer>Made with <i style="color: crimson;" class="fas fa-heart"></i> by <a target="_blank" href="https://github.com/nemesis-as">Nemesis&trade;</a></footer>
 
-	<script src="script.js"></script>
+	<script src="src/js/script.js"></script>
 </body>
 </html>
